--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/svg+xml"  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>We Go You Go</title>
+    <link rel="dns-prefetch" href="https://unsplash.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&family=Duru+Sans&family=Gupter:wght@400;500;700&display=swap" rel="stylesheet">
